--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="114dp"
         android:layout_height="61dp"
         android:backgroundTint="#69E870"
-        android:text="Again"
+        android:text="New Game"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
